Reajuste de botones
Se ajustaron las páginas de añadir actividad y archivo para que tengan un scroll y se puedan ver todos los archivos, además de adaptar el diseño de editar charla para que sea mas parecido a charla.

--- a/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.scss
+++ b/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.scss
@@ -1,16 +1,14 @@
-ion-content.contenedor {
-  --padding-top: 5rem;
-  --padding-left: 2rem;
-  --padding-right: 2rem;
-  --padding-bottom: 2rem;
-  text-align: center;
+.contenedor {
+  height: 100%;
   display: flex;
   flex-direction: column;
+  padding: 5rem 2rem 2rem 2rem;
+  text-align: center;
 
   .scrollable {
     flex-grow: 1;
     overflow-y: auto;
-    max-height: 60vh;
+    max-height: 100%; 
     padding-right: 0.5rem;
   }
 
