--- a/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.html
@@ -34,10 +34,10 @@
 
     <!-- SIDEBAR DERECHO: botones de acción -->
     <aside class="charla-sidebar-right">
-      <ion-button class="btn" (click)="guardarCambios()">Guardar Cambios</ion-button>
-      <ion-button class="btn" (click)="agregarActividades()">Añadir Actividades</ion-button>
-      <ion-button class="btn" (click)="agregarContenido()">Añadir Contenido</ion-button>
-      <ion-button class="btn" (click)="asignarOradores()">Asignar Oradores</ion-button>
+      <ion-button class="btn" color="#7b7de0" (click)="guardarCambios()">Guardar Cambios</ion-button>
+      <ion-button class="btn" color="#7b7de0" (click)="agregarActividades()">Añadir Actividades</ion-button>
+      <ion-button class="btn" color="#7b7de0" (click)="agregarContenido()">Añadir Contenido</ion-button>
+      <ion-button class="btn" color="#7b7de0" (click)="asignarOradores()">Asignar Oradores</ion-button>
     </aside>
 
   </div>
