--- a/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.html
+++ b/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.html
@@ -1,31 +1,35 @@
-<div class="contenedor">
-  <h2>Actividades seleccionadas</h2>
-  <div class="lista">
-    <div class="item" *ngFor="let actividad of actividadesSeleccionadas">
-      <div class="nombre">
-        <ion-icon name="game-controller"></ion-icon>
-        {{ actividad.nombre }}
+<ion-content>
+  <div class="contenedor">
+    <div class="scrollable">
+      <h2>Actividades seleccionadas</h2>
+      <div class="lista">
+        <div class="item" *ngFor="let actividad of actividadesSeleccionadas">
+          <div class="nombre">
+            <ion-icon name="game-controller"></ion-icon>
+            {{ actividad.nombre }}
+          </div>
+          <ion-button fill="clear" shape="round" size="small" (click)="quitarActividad(actividad)">
+            <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+        </div>
       </div>
-      <ion-button fill="clear" shape="round" size="small" (click)="quitarActividad(actividad)">
-        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </div>
-  </div>
 
-  <h2>Actividades por añadir</h2>
-  <div class="lista">
-    <div class="item" *ngFor="let actividad of actividadesDisponibles">
-      <div class="nombre">
-        <ion-icon name="game-controller"></ion-icon>
-        {{ actividad.nombre }}
+      <h2>Actividades por añadir</h2>
+      <div class="lista">
+        <div class="item" *ngFor="let actividad of actividadesDisponibles">
+          <div class="nombre">
+            <ion-icon name="game-controller"></ion-icon>
+            {{ actividad.nombre }}
+          </div>
+          <ion-button fill="clear" shape="round" size="small" (click)="agregarActividad(actividad)">
+            <ion-icon name="add-circle-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+        </div>
       </div>
-      <ion-button fill="clear" shape="round" size="small" (click)="agregarActividad(actividad)">
-        <ion-icon name="add-circle-outline" slot="icon-only"></ion-icon>
-      </ion-button>
     </div>
-  </div>
 
-  <ion-button expand="block" class="volver" (click)="volver()">
-    Volver a charla
-  </ion-button>
-</div>
+    <ion-button expand="block" class="volver" (click)="volver()">
+      Volver a charla
+    </ion-button>
+  </div>
+</ion-content>
