--- a/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.scss
+++ b/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.scss
@@ -1,6 +1,16 @@
 .contenedor {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   padding: 5rem 2rem 2rem 2rem;
   text-align: center;
+
+  .scrollable {
+    flex-grow: 1;
+    overflow-y: auto;
+    max-height: 100%;
+    padding-right: 0.5rem;
+  }
 
   h2 {
     color: #000;
@@ -15,7 +25,7 @@
     border-radius: 10px;
     padding: 1rem;
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0 auto 2rem auto;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -45,13 +55,12 @@
       width: 32px;
       height: 32px;
       min-width: 32px;
-    
+
       ion-icon {
-        font-size: 50rem;
+        font-size: 1.5rem; 
         color: #2f3542;
       }
     }
-    
   }
 
   ion-button.volver {
@@ -64,5 +73,4 @@
     text-transform: none;
     width: 10rem;
   }
-  
 }
