--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
@@ -69,9 +69,9 @@ h1 {
   --color: white;
   white-space: normal;
   text-align: center;
-  height: 5rem;              // Fijo y más cuadrado
+  height: 5rem;              
   width: 13rem;   
-  border-radius: 4px;            // Igual al alto para hacerlo cuadrado
+  border-radius: 4px;            
 }
 
 
