--- a/ProyectoSeremi/src/app/pages/calendario/calendario.page.scss
+++ b/ProyectoSeremi/src/app/pages/calendario/calendario.page.scss
@@ -1,6 +1,6 @@
 .contenido-calendario {
-  margin-left: 11vw;   // Compensa la sidebar izquierda
-  margin-right: 11vw;  // Compensa la sidebar derecha
+  margin-left: 11vw;   
+  margin-right: 11vw;  
   padding: 20px;
   text-align: left;
   }
