--- a/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.scss
+++ b/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.scss
@@ -132,7 +132,7 @@ ion-content.principal-content {
   }
 }
 
-// ----------------- Responsive -----------------
+//Para hacerlo responsivo
 @media (max-width: 768px) {
   .charla-container {
     flex-direction: column;
