--- a/ProyectoSeremi/src/app/pages/seleccionar-archivo/seleccionar-archivo.page.scss
+++ b/ProyectoSeremi/src/app/pages/seleccionar-archivo/seleccionar-archivo.page.scss
@@ -35,7 +35,7 @@
       white-space: nowrap;
       font-weight: 500;
       color: #000;
-      margin-right: 1rem; // da espacio al botón
+      margin-right: 1rem; 
     }
   
     ion-button {
