--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.scss
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.scss
@@ -4,25 +4,25 @@
   max-width: 900px;
   margin: 0 auto;
   top: 65px;
-  }
+}
   
-  h1 {
+h1 {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1rem;
   color: black;
-  }
+}
   
-  .lista-charlas {
+.lista-charlas {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   background-color: #f4f4f4;
   padding: 1rem;
   border-radius: 8px;
-  }
+}
   
-  .charla-btn {
+.charla-btn {
   --background: #d9d9d9;
   --color: black;
   --pading-start: 1rem;
@@ -35,10 +35,10 @@
   font-size: 1rem;
   justify-content: flex-start;
   text-transform: none;
-  }
+}
   
   
-  .volver-btn {
+.volver-btn {
   position: fixed;
   bottom: 20px;
   z-index: 10;
@@ -51,9 +51,9 @@
   left: 10px;
   --background: #2e2b3d;
   --color: white;
-  }
+}
   
-  .crear-charla-btn {
+.crear-charla-btn {
     position: fixed;
   bottom: 20px;
   z-index: 10;
@@ -68,13 +68,12 @@
   --color: white;
   white-space: normal;
   text-align: center;
-  height: 5rem;              // Fijo y más cuadrado
+  height: 5rem;             
   width: 13rem;   
   border-radius: 4px;  
-  }
+}
   
 @media (max-width: 500px) {
-  
   .crear-actividad-btn {
     font-size: 0.8rem;
     padding: 0.4rem 0.6rem;
