--- a/ProyectoSeremi/src/app/pages/registrar-asistentes/registrar-asistentes.page.scss
+++ b/ProyectoSeremi/src/app/pages/registrar-asistentes/registrar-asistentes.page.scss
@@ -1,6 +1,6 @@
 .registrar-asistentes-container {
 
-  padding: 6rem 2rem 2rem 2rem; // ← MÁS espacio arriba para dejar hueco al header
+  padding: 6rem 2rem 2rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
