--- a/ProyectoSeremi/src/app/pages/seleccionar-actividad/seleccionar-actividad.page.scss
+++ b/ProyectoSeremi/src/app/pages/seleccionar-actividad/seleccionar-actividad.page.scss
@@ -46,8 +46,8 @@
       min-width: 32px;
     
       ion-icon {
-        font-size: 50rem; // ajusta según lo que se vea bien visualmente
-        color: #2f3542; // o el color que prefieras
+        font-size: 50rem; 
+        color: #2f3542; 
       }
     }
     
