--- a/ProyectoSeremi/src/app/pages/ver-perfil/ver-perfil.page.scss
+++ b/ProyectoSeremi/src/app/pages/ver-perfil/ver-perfil.page.scss
@@ -1,7 +1,7 @@
 .perfil-background {
    display: flex;
   top: 60px;
-  --padding-bottom: 3rem; // Para evitar que los botones queden pegados al borde inferior
+  --padding-bottom: 3rem; 
 }
 
 .perfil-container {
