--- a/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -3,16 +3,16 @@
 
   <div class="form-group">
     <label>Correo electrónico</label>
-    <ion-input placeholder="*Ingrese correo" type="email"></ion-input>
+    <ion-input placeholder="*Ingrese correo" type="email" [(ngModel)]="email" name="email"></ion-input>
   </div>
 
   <div class="form-group">
     <label>Contraseña</label>
-    <ion-input placeholder="*Mínimo 8 caracteres, 2 números." type="password"></ion-input>
+    <ion-input placeholder="*Mínimo 8 caracteres, 2 números." type="password" [(ngModel)]="contrasenia" name="contrasenia"></ion-input>
   </div>
 
   <div class="buttons">
-    <ion-button expand="block" (click)="irAPrincipal()">
+    <ion-button expand="block" (click)="iniciarSesion()">
       <ion-icon name="log-in-outline" slot="start"></ion-icon>
       Iniciar sesión
     </ion-button>
