--- a/ProyectoSeremi/src/app/pages/registro/registro.page.scss
+++ b/ProyectoSeremi/src/app/pages/registro/registro.page.scss
@@ -125,3 +125,32 @@ ion-input::part(native) {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   width: fit-content;
 }
+
+.nombre-apellido {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 8px;
+  width: 100%;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+}
+
+.campo-nombre,
+.campo-apellido {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.campo-nombre ion-input,
+.campo-apellido ion-input {
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 2px 8px;
+  background: #fff;
+  font-size: 0.8rem;
+  color: #000;
+}
