--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
@@ -20,7 +20,7 @@
         Volver al menú
       </ion-button>
 
-      <ion-button class="crear-charla-btn" (click)="goToCrearCharla()">
+      <ion-button *ngIf="esAdmin" class="crear-charla-btn" (click)="goToCrearCharla()">
         Crear Charla Nueva
       </ion-button>
 
