--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
@@ -9,10 +9,10 @@
 
       <div class="botones-superiores">
         <button class="boton-accion" (click)="irAActividadIniciada()">Iniciar Actividad</button>
-        <button class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
+        <button *ngIf="esAdmin" class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
       </div>
 
-      <ion-button class="eliminar-btn" (click)="apretarEliminar()">Eliminar Actividad</ion-button>
+      <ion-button *ngIf="esAdmin" class="eliminar-btn" (click)="apretarEliminar()">Eliminar Actividad</ion-button>
       
     </div>
   </div>
