--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
@@ -18,7 +18,7 @@
       Volver al menú
     </ion-button>
 
-    <ion-button class="crear-actividad-btn" (click)="irACrearActividad()">
+    <ion-button *ngIf="esAdmin" class="crear-actividad-btn" (click)="irACrearActividad()">
       Crear Actividad Nueva
     </ion-button>
 
