correcciones de roles
se corrigio el rol de usuario debido a que este si posee la posibilidad de agregar actividad y presentaciones de las charlas

--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
@@ -9,7 +9,7 @@
 
       <div class="botones-superiores">
         <button class="boton-accion" (click)="irAActividadIniciada()">Iniciar Actividad</button>
-        <button *ngIf="esAdmin" class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
+        <button class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
       </div>
 
       <ion-button *ngIf="esAdmin" class="eliminar-btn" (click)="apretarEliminar()">Eliminar Actividad</ion-button>
